--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,8 @@
-/* You can add global styles to this file, and also import other style files */
+body{
+    background-image: url("https://www.blue-cap.de/app/uploads/2021/12/iStock-1241264665_web.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+background-size: cover;
+//    background-attachment: fixed;
+
+}
